--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde ="1.0.104"
-serde_derive ="1.0.104"
-ron="0.6.2"
+serde = { version = "1.0.104", features = ["derive"] }
+ron="0.8"
