--- a/fuzz_runner/Cargo.toml
+++ b/fuzz_runner/Cargo.toml
@@ -7,21 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = "0.17.0"
-time = "0.2.9"
-subprocess = "0.2.4"
-libc = "0.2.68"
-quick-error = "*"
-tempfile = "3.1.0"
-rand = "0.7.3"
-serde_derive = "1.0"
-serde = "1.0"
-byteorder = "*"
-snafu = "0.6.3"
-timeout-readwrite = "0.3.1"
-glob="0.3.0"
+nix = "0.26"
+libc = "0.2"
+tempfile = "3"
+# ron complains with serde < 1.0.103
+serde = { version = "1.0.103", features = ["derive"] }
+byteorder = "1"
+snafu = "0.7"
+timeout-readwrite = "0.3"
+glob="0.3"
 config={path="../config"}
-colored = "2.0.0"
-derivative = "2.1.1"
-fs4 = "0.5.4"
-
+colored = "2"
+derivative = "2.2"
+fs4 = "0.6"
